--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,6 +29,7 @@
             android:name=".Calculator"
             android:label="@string/app_name"
             android:launchMode="singleTask"
+            android:exported="true"
             android:theme="@style/Theme.Calculator">
             <layout
                 android:minHeight="220dp"
@@ -44,6 +45,7 @@
         <activity
             android:name=".Licenses"
             android:launchMode="singleTop"
+            android:exported="true"
             android:parentActivityName=".Calculator"
             android:theme="@style/Theme.Licenses" />
 
